[package]
name = "nuklear-backend-glium"
version = "0.4.0"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]
keywords = ["widgets", "gui", "interface", "graphics", "glium"]
description = "A glium drawing backend for Rust wrapper for Nuklear 2D GUI library"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/snuk182/nuklear-backend-glium.git"
homepage = "https://github.com/snuk182/nuklear-backend-glium"
edition = "2018"

[lib]
name = "nuklear_backend_glium"
path = "src/lib.rs"

[dependencies]
log = "~0.3"
glium = "~0.24"
nuklear-rust = "~0.6"

